# postrr

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  pgtest.sh  version-gen.sh
doc/: Makefile.am  postrr.txt
src/: Makefile.am  Makefile.pgxs.in  base.c  cdata.c  postrr.control.in  postrr.h.in  postrr.sql.in  postrr_comments.sql  rrtimeslice.c  uninstall_postrr.sql
src/utils/: pg_spi.c  pg_spi.h
